--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-eval' https://api-maps.yandex.ru; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*.maps.yandex.net https://api-maps.yandex.ru https://*.yandex.ru; connect-src 'self' https://*.maps.yandex.net https://api-maps.yandex.ru https://*.yandex.ru;"
+      content="default-src 'self'; script-src 'self' 'unsafe-eval' https://api-maps.yandex.ru https://yastatic.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*.maps.yandex.net https://api-maps.yandex.ru https://*.yandex.ru https://yastatic.net; connect-src 'self' https://*.maps.yandex.net https://api-maps.yandex.ru https://*.yandex.ru https://yastatic.net;"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
